Fix: Fix bug where label containing the correct answer had unecessary padding
Previously, if the user input an incorrect answer, when the correct answer is displayed at the bottom, the label containing it had unnecessary padding that went off screen, making the window scrollable. Resolved the bug by removing the pading for the label.

--- a/src/components/IncorrectScreen/IncorrectScreen.css
+++ b/src/components/IncorrectScreen/IncorrectScreen.css
@@ -40,9 +40,7 @@
 .incorrect-screen__bottom-section__label {
     position: absolute;
     color: red;
-    top: 0%;
     font-size: 18px;
-    padding-bottom: 100px;
     top: 15px;
     left: 50%;
     transform: translate(-50%, 0%);
